# kapy-lang

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CMakeLists.txt
include/kapy/Analysis/: Affine.h  AliasAnalysis.h  AlignAnalysis.h  AllocAnalysis.h  Allocation.h  AnalysisUtils.h  BlockAnalysis.h  CallGraph.h  Integer.h  IntegerAnalysis.h  Layout.h  LayoutUtils.h  MemBar.h  OpHelpers.h  Utils.h
include/kapy/Dialect/: CMakeLists.txt
include/kapy/Support/: CommonUtils.h  LayoutUtils.h
lib/: CMakeLists.txt
lib/Analysis/: Affine.cpp  AliasAnalysis.cpp  AlignAnalysis.cpp  AllocAnalysis.cpp  Allocation.cpp  AnalysisUtils.cpp  BlockAnalysis.cpp  CMakeLists.txt  Integer.cpp  IntegerAnalysis.cpp  Layout.cpp  LayoutUtils.cpp  MemBar.cpp  OpHelpers.cpp  Utils.cpp
lib/Conversion/: CMakeLists.txt
lib/Conversion/KapyToKgpu/: CMakeLists.txt  ConversionPass.cpp  ConversionTarget.cpp  TypeConverter.cpp
lib/Conversion/KgpuToLLVM/: ArangeOpToLLVM.cpp  BroadcastOpToLLVM.cpp  CMakeLists.txt  CallReturnOpToLLVM.cpp  ChangeOpToLLVM.cpp  ConversionPass.cpp  ConversionTarget.cpp  ConvertUtils.cpp  CpAsyncOpToLLVM.cpp  ElementwiseOpToLLVM.cpp  FuncOpToLLVM.cpp  LdGlobalOpToLLVM.cpp  LdMatrixOpToLLVM.cpp  LdSharedOpToLLVM.cpp  MatmulOpToLLVM.cpp  MkGlobalOpToLLVM.cpp  MkSharedOpToLLVM.cpp  PTXBuilder.cpp  ParallelIdOpToLLVM.cpp  ReduceOpToLLVM.cpp  SelectOpToLLVM.cpp  SplatLikeOpToLLVM.cpp  StGlobalOpToLLVM.cpp  StSharedOpToLLVM.cpp  SvGlobalOpToLLVM.cpp  SvSharedOpToLLVM.cpp  TransposeOpToLLVM.cpp  TypeConverter.cpp
lib/Support/: CMakeLists.txt  LayoutUtils.cpp
python/src/: ir.cc  main.cc  passes.cc
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Analysis/: matmul.mlir
test/Conversion/KapyToKgpu/: elementwise_add.mlir  matmul.mlir  reduce_sum.mlir
test/Dialect/Kapy/: canonicalize.mlir  combine.mlir  reorder_broadcast.mlir
test/Dialect/Kgpu/: accelerate_matmul.mlir  cache_matmul_operand.mlir  canonicalize.mlir  optimize_dot_operand.mlir  optimize_matmul.mlir
test/lib/: CMakeLists.txt
test/lib/Analysis/: CMakeLists.txt  TestAllocation.cpp  TestInteger.cpp  TestMemBar.cpp
test/lib/TestAnalysis/: CMakeLists.txt  TestAlignAnalysis.cpp  TestAllocAnalysis.cpp  TestCandidateLayouts.cpp  TestIntegerAnalysis.cpp  (+1 more)
(+78 files in other folders)
